[tool.poetry]
name = "googl"
version = "0.1.0"
description = "Drive files"
authors = ["M <refits.minxes0h@icloud.com>"]
license = "UNLICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
util = {path = "../util"}
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.125.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
